[package]
name = "double-array-trie-js-bind"
version = "0.1.0"
authors = ["Yuichiro Sawai <sawai.yuichiro.sn0@is.naist.jp>"]

[features]
default-features = ["console_error_panic_hook"]

[lib]
crate-type = ["cdylib"]

[dependencies]
cfg-if = "0.1"
wasm-bindgen = "0.2"
console_error_panic_hook = { version = "0.1.5", optional = true }
double-array-trie = { git = "https://github.com/yuichiro-s/rust-double-array-trie" }
